src/test/ui/codemap_tests/huge_multispan_highlight.stderr
error[E0596]: cannot borrow immutable local variable `x` as mutable
  --> $DIR/huge_multispan_highlight.rs:100:18
   |
LL |     let x = "foo";
   |         - consider changing this to `mut x`
...
LL |     let y = &mut x; //~ ERROR cannot borrow
   |                  ^ cannot borrow mutably

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0596"
